...
                    .tag(0)
                    
                    NavigationStack {
                        FavoritesView(chatbotVM: chatbotVM, selectedTab: $selectedTab)
                    }
                    .tabItem {
                        Label("Favorites", systemImage: "star.fill")
                    }
                    .tag(1)

                    NavigationStack {
                        ChatbotView(chatbotVM: chatbotVM, locationManager: locationManager)
                    }
                    .tabItem {
                        Label("Chatbot", systemImage: "message.fill")
                    }
                    .tag(2)
                }
                .onAppear {
                    locationManager.requestLocation()
                    let appearance = UITabBarAppearance()
...
